@@ -1,3 +1,11 @@
+Thu Feb 27 09:55:11 2003  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: make graph window a dialog, allow
+	  stopping/interrupting of the graph, run the event loop often.
+
+	* src/gnome-genius.c: don't allow executing code while somehting
+	  else is running (for manual, answer copying and such)
+
 Thu Feb 27 08:01:41 2003  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: allow graphing more then one function and fix
